<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--   using data binding -->
    <data>
        <variable name="assistantViewModel"
          type="com.example.googleassistant.assistant.AssistantViewModel"/>
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:background="#fff"
        android:orientation="vertical"
        android:id="@+id/assistantConstraintLayout"
        tools:context=".MainActivity"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="30dp"
            android:id="@+id/recylerView"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="650dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager">
        </androidx.recyclerview.widget.RecyclerView>
        <View
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="0dp">
        </View>
        <ImageView android:layout_width="70dp"
            android:layout_marginBottom="30dp"
            android:clickable="true"
            android:layout_gravity="center_horizontal"
            android:id="@+id/assistant_Action"
            android:src="@drawable/mic"
            android:layout_height="70dp"
            android:focusable="true"
            android:contentDescription="@string/todo">
        </ImageView>
    </LinearLayout>
</layout>