...
            android:src="@drawable/actionbar">

        </ImageView>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/hiGoogle"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
...
        app:layout_constraintTop_toBottomOf="@+id/hiGoogle"
        android:layout_height="50dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/action_explore"
                android:layout_width="50dp"
                android:src="@drawable/explore"
                android:layout_height="50dp"
                android:contentDescription="@string/todo">
            </ImageView>
        </LinearLayout>
...
