<resources>
    <string name="app_name">Google Assistant</string>
    <string name="title_activity_google_lens">GoogleLensActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="google_assistant">Google Assistant</string>
    <string name="todo">TODO</string>
    <string name="first_message">"Hello , How may i help you"</string>
    <string name="secound_message">"Can you tell me something?"</string>
    <string name="image">Image</string>
    <string name="text_from_image">Text From Image</string>
    <string name="search">Search</string>
    <string name="text_will_appear_here">Text will appear here</string>
    <string name="image_preview">image preview</string>
    <string name="get_temperature_here">Get temperature here</string>
    <string name="today">Today</string>
    <string name="add_image">Add Image</string>

</resources>