...
        android:textSize="20sp">
    </TextView>
    <androidx.cardview.widget.CardView
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/weatherCardView"
        app:cardMaxElevation="300dp"
        app:cardCornerRadius="60dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:foregroundGravity="center"
        android:elevation="300dp">
...
